RESOLVED FIXED57133
PluginView's call to invalidateContentsAndWindow() in invalidateRect() is wrong for plug-ins which paint into compositing layers
https://bugs.webkit.org/show_bug.cgi?id=57133
Summary PluginView's call to invalidateContentsAndWindow() in invalidateRect() is wro...
Anders Carlsson
Reported 2011-03-25 17:38:58 PDT
PluginView's call to invalidateContentsAndWindow() in invalidateRect() is wrong for plug-ins which paint into compositing layers
Attachments
Patch (2.33 KB, patch)
2011-03-25 17:41 PDT, Anders Carlsson
sam: review+
Anders Carlsson
Comment 1 2011-03-25 17:41:02 PDT
Sam Weinig
Comment 2 2011-03-25 17:42:24 PDT
Comment on attachment 86999 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=86999&action=review > Source/WebKit2/ChangeLog:5 > + PluginView's call to invalidateContentsAndWindow() in invalidateRect() is wrong for plug-ins which paint into compositing layers apos!
Anders Carlsson
Comment 3 2011-03-25 17:45:08 PDT
WebKit Review Bot
Comment 4 2011-03-25 18:51:33 PDT
http://trac.webkit.org/changeset/82012 might have broken Windows 7 Release (Tests) The following tests are not passing: fast/text/justify-ideograph-leading-expansion.html
Note You need to log in before you can comment on or make changes to this bug.